syntax = "proto3";
package shmsg;

option go_package = "./;shmsg";

message DecryptionTrigger {
    uint64 instanceID = 1;
    bytes epochID = 2;
    uint64 blockNumber = 3;
    bytes transactionsHash = 4;
    bytes signature = 5;
}

// TODO: replace keyper index by signature
message DecryptionKeyShare {
    uint64 instanceID = 1;
    uint64 eon = 4;
    bytes epochID = 2;
    uint64 keyperIndex = 5;
    bytes share = 6;
}

message DecryptionKey {
    uint64 instanceID = 1;
    uint64 eon = 2;
    bytes epochID = 3;
    bytes key = 4;
}

message CipherBatch {
    DecryptionTrigger decryption_trigger = 1;
    repeated bytes transactions = 2;
}

message DecryptionSignature {
    uint64 instanceID = 1;
    bytes epochID = 2;
    bytes signedHash = 3;
    bytes signature = 4;
    bytes signerBitfield = 5;
}

message AggregatedDecryptionSignature {
    uint64 instanceID = 1;
    bytes epochID = 2;
    bytes signedHash = 3;
    bytes aggregatedSignature = 4;
    bytes signerBitfield = 5;
}

message EonPublicKey {
    uint64 instanceID = 1;
    bytes publicKey= 2;
    uint64 eon = 3;
}

message TimedEpoch {
    uint64 instanceID = 1;
    bytes epochID = 2;
    uint64 notBefore = 3;
}
